# Hello-World-UV-Project

Hello-World-UV-Project/Hello-World-UV-Project/my_00_uv/: desktop.ini  pyproject.toml
Hello-World-UV-Project/Hello-World-UV-Project/my_00_uv/src/my_00_uv/: __init__.py  gemini.py  hello.py
