[project]
name = "my-00-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "marfooa-ismail", email = "163725206+marfooa-ismail@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.4",
    "litellm>=1.59.8",
]

[project.scripts]
my-00-uv = "my_00_uv:main"
Hello="my_00_uv.hello:Hello_function"
litellm="my_00_uv.gemini:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
